# typeLan

./: .gitignore  Cargo.toml  Makefile  README.md  deploy.ps1  en_dict.txt  he_dict.txt
src/: dictionary.rs  gui.rs  keymap.rs  layout.rs  main.rs  types.rs
src/platform/: linux.rs  macos.rs  mod.rs  tray.rs  windows.rs
