[package]
name = "typeLan"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5.3"
core-foundation = "0.9"
core-foundation-sys = "0.8"
tray-icon = "0.24"
tao = "0.35"

[target.'cfg(target_os = "windows")'.dependencies]
rdev = "0.5.3"
tray-icon = "0.24"
tao = "0.35"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }

